[package]
name = "tokio-exsample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "interval"
path = "src/time/interval.rs"
[[bin]]
name = "interval_at"
path = "src/time/interval_at.rs"